<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tweeter</string>
    <string name="login_label">Log in</string>
    <string name="intent_scheme">oauth</string>
    <string name="intent_host">cprest</string>
    <string name="tweet_body">Tweet body.</string>
    <string name="twitter_handle">handle</string>
    <string name="profile_image">Profile Image</string>
    <string name="user_name">User Name</string>
    <string name="timestamp">0 m</string>
    <string name="tweet_prompt">What\'s happening?</string>
    <string name="tweet_button">Tweet</string>
    <string name="charsLeft">180 chars left</string>
    <string name="home">Twitter</string>
    <string name="faves">0</string>
    <string name="retweets">0</string>

</resources>